name: blackjack
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Black Jack Module
description:  
data-dir: ""
 
executable blackjack
    build-depends: QuickCheck -any, base -any, random -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
 
test-suite test-blackjack
    build-depends: QuickCheck -any, base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src